--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,35 @@
 </head>
 <body class="contact">
 <header>
+
+<script>
+
+  function sendEmail(){
+    const fName = document.getElementById('fName').value;
+    const lName = document.getElementById('lName').value;
+    const email = document.getElementById('email').value;
+    const company = document.getElementById('company').value;
+    const message = document.getElementById('message').value;
+
+    if(fName != '' && lName != '' && /^\w+([\.-]?\w+)*@\w+([\.-]?\w+)*(\.\w{2,3})+$/.test(email) === true && message != ''){
+      let data = JSON.stringify({fName: fName, lName: lName, email: email, company: company, message: message});
+      fetch("/sendEmail", {
+          method: "POST",
+          headers: {"Content-Type": "application/json"},
+          body: data,
+      }).then(response => {
+          return response.json();
+      }).then(data =>{
+          console.log(data);
+      });
+    }
+    else{
+      console.log("invalid form inputs for sending an email")
+    }
+  }
+
+</script>
+
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
   <a class="navbar-brand" href="index.html"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
   <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
@@ -30,28 +59,28 @@
         <form>
             <div class="row mt-4">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control firstNameInput p-4 mb-3" aria-describedby="First Name" placeholder="First Name">
+                    <input required id="fName" type="text" class="form-control firstNameInput p-4 mb-3" aria-describedby="First Name" placeholder="First Name">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control lastNameInput p-4" aria-describedby="Last Name" placeholder="Last Name">
+                    <input required id="lName" type="text" class="form-control lastNameInput p-4" aria-describedby="Last Name" placeholder="Last Name">
                 </div>
             </div>
             <div class="row pt-3 pb-3">
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <input type="email" class="form-control emailInputContact p-4 mb-3" aria-describedby="Email" placeholder="Email">
+                    <input required id="email" type="email" class="form-control emailInputContact p-4 mb-3" aria-describedby="Email" placeholder="Email">
                 </div>
                 <div class="col-lg-6 col-md-6 col-sm-12 col-xs-12">
-                    <input type="text" class="form-control companyInput p-4" aria-describedby="Company" placeholder="Company">
+                    <input id="company" type="text" class="form-control companyInput p-4" aria-describedby="Company" placeholder="Company">
                 </div>
             </div>
             <div class="row pt-3 pb-3">
                 <div class="col-12">
                     <div class="form-group">
-                        <textarea class="form-control" id="messageInput" placeholder="Message" rows="3"></textarea>
+                        <textarea required id="message" class="form-control" id="messageInput" placeholder="Message" rows="3"></textarea>
                     </div>
                 </div>
             </div>
-            <button type="submit" class="contactButton btn btn-primary inline ml-2 mt-2 mb-2 p-3 pl-5 pr-5">Submit</button>
+            <button onClick="sendEmail()" type="submit" class="contactButton btn btn-primary inline ml-2 mt-2 mb-2 p-3 pl-5 pr-5">Submit</button>
         </form>
     </div>
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 p-5">
