--- a/features.html
+++ b/features.html
@@ -8,20 +8,67 @@
   <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.5.0/css/all.css" integrity="sha384-B4dIYHKNBt8Bc12p+WXckhzcICo0wtJAoU8YZTY5qE0Id1GSseTk6S+L3BlXeVIU" crossorigin="anonymous">
 </head>
 <body class="features">
+<script>
+    function expandLittleNavbar(){
+        document.getElementById('expandedLittleNavbar').style.height = "100vh"
+        document.getElementById('expandedLittleNavbar').style.visibility = "visible"
+    }
+
+   function hideLittleNavbar(){
+        document.getElementById('expandedLittleNavbar').style.height = "0vh"
+        document.getElementById('expandedLittleNavbar').style.visibility = "hidden"
+    }
+</script>
+
 <header>
 <nav class="navbar navbar-expand-lg navbar-light pr-5 pl-5">
-  <a class="navbar-brand" href="index.html"><img class="mb-2" src="media/logo.svg"><span>Exokit</span></a>
-  <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+<a class="navbar-brand" href="index.html"><img src="media/logo.svg"><span id="brandName">Exokit</span></a>
+<div class="collapse navbar-collapse" id="bigNavbar">
     <div class="navbar-nav">
-      <a class="nav-item nav-link active pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
-      <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="features.html"><h5 class="font-weight-normal">Features</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="docs"><h5 class="font-weight-normal">Docs</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="blog.html"><h5 class="font-weight-normal">Blog</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="about.html"><h5 class="font-weight-normal">About</h2></a>
+    <a class="nav-item nav-link pr-4 pl-4" href="contact.html"><h5 class="font-weight-normal">Contact</h2></a>
     </div>
-  </div>
+</div>
+
+<div id="littleNavbar">
+    <h5 onclick="expandLittleNavbar()"class="mt-1" style="cursor: pointer">Features<i class="fas fa-angle-down ml-2"></i></h5>
+</div>
+
 </nav>
 </header>
+
+<div id="expandedLittleNavbar" style="position: fixed; top: 0; right: 0; left: 0; background-color: white; z-index: 3; visibility: hidden;">
+    <div class="row text-center mt-5">
+    <div class="col-12 mt-5 mb-5">
+        <img src="media/logo.svg" style="height: 7vh; width: auto;"></a>
+        <h2 style="font-family: Bison;">Exokit</h2>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="index.html"><h5 class="font-weight-light">Home</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="features.html"><h5>Features</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="docs/"><h5 class="font-weight-light">Docs</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="blog.html"><h5 class="font-weight-light">Blog</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="about.html"><h5 class="font-weight-light">About</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <a href="contact.html"><h5 class="font-weight-light">Contact</h5></a>
+    </div>
+    <div class="col-12 mb-4">
+        <i onclick="hideLittleNavbar()" class="fas fa-times fa-2x" style="margin-bottom: 5vh; cursor: pointer;"></i>
+    </div>
+    </div>
+</div>
 
 <div class="row featuresHero">
     <div class="col-lg-6 col-md-12 col-sm-12 col-xs-12 featuresHeroText">
